[package]
name = "trees"
version = "0.1.4"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = [ "tree", "forest", "linked", "collection", "simple" ]
readme = "README.md"
repository = "https://github.com/oooutlk/trees"
documentation = "https://docs.rs/trees"
categories = [ "data-structures", "no-std" ]
description = "General purpose tree data structures"

[features]
no_std = []
